--- a/index.html
+++ b/index.html
@@ -1,33 +1,41 @@
+
 <!DOCTYPE html>
 <html>
-
 <head>
-  <meta charset="utf-8">
-  <title>My test page</title>
-  <style>
-    #jnkc {
-      width: 100%;
-      height: 100%;
-      min-height: 970px;
-    }
+    <title>fortest</title>
+    <style>
+        div.parent{
+            width: 1080px;
+            height: 720px;
+            /* background: #ccc; */
+            background-image: url(1.png);
+        }
+        div.son{
+            width: 60%;
+            height: 30px;
+            background: white;
+            font-size: 28px;
+            text-align: center;
+            vertical-align: text-bottom;
+            margin-top: 200px;
+            margin-left: 140px;
+            position:absolute;
 
-    #jnkc2 {
-      width:auto;
-      height: 1000px;
-      text-align: center;
-      font-size: 28px;      
-    }
-  </style>
+        }
+        div.son.span{
+          position:absolute;
+ bottom:0px;
+ padding:0px;
+ margin:0px
+        }
+    </style>
 </head>
-
 <body>
-  <div id='jnkc' style="background-image: url(1.png);">
-    <div2 id='jnkc2' style="content: center;"></div2>
-  </div>
-
-  <script>
-    setInterval("jnkc2.innerHTML=(new Date().toLocaleString('chinese',{ hour12: false })).replaceAll('/','-').replace(',','');", 1000);
-  </script>
+    <div class="parent">
+        <div class="son" id = "jnkc2"></div>
+    </div>
+    <script>
+      setInterval("jnkc2.innerHTML=(new Date().toLocaleString('chinese',{ hour12: false })).replaceAll('/','-').replace(',','');", 1000);
+    </script>
 </body>
-
 </html>
