--- a/index.html
+++ b/index.html
@@ -6,28 +6,24 @@
     <style>
         div.parent{
             width: 1080px;
-            height: 720px;
+            height: 1700px;
             /* background: #ccc; */
-            background-image: url(1.png);
+            background-image: url(1.png) ;
+            background-size: cover;
         }
         div.son{
-            width: 60%;
-            height: 30px;
+            width: 100%;
+            height: 80px;
             background: white;
-            font-size: 28px;
+            font-size: 40px;
             text-align: center;
             vertical-align: text-bottom;
-            margin-top: 200px;
-            margin-left: 140px;
+            margin-top: 290px;
+            margin-left: 5%;
             position:absolute;
 
         }
-        div.son.span{
-          position:absolute;
- bottom:0px;
- padding:0px;
- margin:0px
-        }
+  
     </style>
 </head>
 <body>
