--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <style>
         div.parent{
             width: 1080px;
-            height: 1700px;
+            /* height: 1700px; */
             /* background: #ccc; */
-            background-image: url(1.png) ;
+            /* background-image: url(1.png) /; */
             background-size: cover;
         }
         div.son{
