--- a/index.html
+++ b/index.html
@@ -1,37 +1,13 @@
-
-<!DOCTYPE html>
-<html>
-<head>
-    <title>fortest</title>
-    <style>
-        div.parent{
-            width: 1080px;
-            /* height: 1700px; */
-            /* background: #ccc; */
-            /* background-image: url(1.png) /; */
-            background-size: cover;
-        }
-        div.son{
-            width: 100%;
-            height: 80px;
-            background: white;
-            font-size: 40px;
-            text-align: center;
-            vertical-align: text-bottom;
-            margin-top: 290px;
-            margin-left: 5%;
-            position:absolute;
-
-        }
-  
-    </style>
-</head>
-<body>
-    <div class="parent">
-        <div class="son" id = "jnkc2"></div>
-    </div>
-    <script>
-      setInterval("jnkc2.innerHTML=(new Date().toLocaleString('chinese',{ hour12: false })).replaceAll('/','-').replace(',','');", 1000);
-    </script>
-</body>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  </head>
+  <body>
+    <h1>Hello, world!</h1>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+  </body>
 </html>
